welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:9: error: value ++ is not a member of Int
			i++
                         ^